# pkflow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  deploy.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/001/: 001.ctl  README.md  demo.csv
pkflow/: __init__.py  cli.py  compare.py  config.py  state.py
pkflow/backends/: base.py  nonmem.py
pkflow/diagnostics/: gof.py  vpc.py
pkflow/executors/: local.py
pkflow/model/: results.py
pkflow/report/: render.py
pkflow/workflows/: __init__.py
pyrana/: compare.py  config.py
pyrana/backends/: __init__.py  nonmem.py
pyrana/diagnostics/: __init__.py  gof.py  shrinkage.py
pyrana/executors/: __init__.py
pyrana/model/: __init__.py  base.py  results.py
pyrana/report/: __init__.py
pyrana/report/templates/: run_report.md.j2
pyrana/workflows/: bootstrap.py
scripts/: release.sh
skills/: README.md
skills/pkflow/: SKILL.md
tests/: conftest.py  test_backends_nonmem.py  test_backends_registry.py  test_bootstrap.py  test_cli_basic.py  test_cli_bootstrap.py  test_cli_compare.py  test_cli_config.py  test_cli_etacov.py  test_cli_last_run.py  test_cli_report.py  test_cli_shrinkage.py  test_compare.py  test_config.py  test_eta_covariate.py  test_executor.py  test_gof.py  test_model.py  test_report.py  test_results.py  test_shrinkage.py  test_vpc.py
tests/fixtures/: 004.mod
