[project]
name = "pkflow"
version = "0.1.0a3"
description = "Pharmacometric modeling workflow CLI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Yufeng Zhang", email = "zhangyf@cuhk.edu.hk" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["pharmacometrics", "nonmem", "pkpd", "nlme", "modeling", "vpc", "bootstrap"]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pharmpy-core>=1.0",
    "plotnine>=0.13",
    "scikit-misc>=0.3",  # loess smoothing for GOF plots (geom_smooth method="loess")
    "pyarrow>=14.0",     # parquet sidecars for Results
    "jinja2>=3.1",       # report templating (html/docx conversion needs system pandoc)
    "tomli>=2.0; python_version < '3.11'",  # tomllib backport for 3.10
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage      = "https://github.com/kinginsun/pkflow"
Repository    = "https://github.com/kinginsun/pkflow"
Issues        = "https://github.com/kinginsun/pkflow/issues"
Documentation = "https://github.com/kinginsun/pkflow#readme"

[project.scripts]
pkflow = "pkflow.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
